edited role user relation